tests/security-fixtures/opengrep/negative/python.py
import subprocess
subprocess.run(["printf", "synthetic"], check=False)
